syntax = "proto3";

option java_multiple_files = true;
option java_package = "ec.com.dinersclub.issuedDeviceAdministration.infrastructure.grpc";

package passwordassignment;

service PasswordAssignmentService {
  rpc UpdatePasswordAssignmentInstance (Rec_updatePasswordAssignmentInstanceRecordRq) returns (Rec_updatePasswordAssignmentInstanceRecordRs) {}
}

message Rec_updatePasswordAssignmentInstanceRecordRq {
  PasswordAssignment passwordAssignment = 1;
  string username = 2;
  CustomerReference customerReference = 3;
  string reason = 4;
  string sourceCode = 5;
  PaymentCard paymentCard = 6;
  bool previousChange = 7;
  TokenAssignment tokenAssignment = 8;
}

message PasswordAssignment {
  string passwordStoredValue = 1;
  string passwordValue = 2;
}

message CustomerReference {
  PartyReference partyReference = 1;
}

message PartyReference {
  string partyType = 1;
}

message PaymentCard {
  string cardNumber = 1;
}

message TokenAssignment {
  TokenIdentificationCode tokenIdentificationCode = 1;
}

message TokenIdentificationCode {
  IdentifierValue identifierValue = 1;
}

message IdentifierValue {
  string value = 1;
}

message Rec_updatePasswordAssignmentInstanceRecordRs {
  StatusInstanceRecord statusInstanceRecord = 1;
  ResponsePasswordAssignment passwordAssignment = 2;
}

message StatusInstanceRecord {
  string statusType = 1;
  string transactionDate = 2;
  string status = 3;
  string statusCode = 4;
  string providerCode = 5;
  string message = 6;
  string description = 7;
}

message ResponsePasswordAssignment {
  UsageLog usageLog = 1;
}

message UsageLog {
  LogEntry logEntry = 1;
}

message LogEntry {
  string logEntryDescription = 1;
  string logEntryIdentification = 2;
  string logEntryValueDate = 3;
  string logEntryValueTime = 4;
} 